05/21/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_MediaTailor_PlaybackConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_MediaTailor_PlaybackConfiguration.json
@@ -91,16 +91,25 @@
       "additionalProperties": false,
       "properties": {
         "Mode": {
-          "description": "Sets the ad suppression mode. By default, ad suppression is set to OFF and all ad breaks are filled with ads or slate. When Mode is set to BEHIND_LIVE_EDGE, ad suppression is active and MediaTailor won't fill ad breaks on or behind the ad suppression Value time in the manifest lookback window.",
+          "description": "Sets the ad suppression mode. By default, ad suppression is off and all ad breaks are filled with ads or slate. When Mode is set to BEHIND_LIVE_EDGE, ad suppression is active and MediaTailor won't fill ad breaks on or behind the ad suppression Value time in the manifest lookback window. When Mode is set to AFTER_LIVE_EDGE, ad suppression is active and MediaTailor won't fill ad breaks that are within the live edge plus the avail suppression value.",
           "type": "string",
           "enum": [
             "OFF",
-            "BEHIND_LIVE_EDGE"
+            "BEHIND_LIVE_EDGE",
+            "AFTER_LIVE_EDGE"
           ]
         },
         "Value": {
           "description": "A live edge offset time in HH:MM:SS. MediaTailor won't fill ad breaks on or behind this time in the manifest lookback window. If Value is set to 00:00:00, it is in sync with the live edge, and MediaTailor won't fill any ad breaks on or behind the live edge. If you set a Value time, MediaTailor won't fill any ad breaks on or behind this time in the manifest lookback window. For example, if you set 00:45:00, then MediaTailor will fill ad breaks that occur within 45 minutes behind the live edge, but won't fill ad breaks on or behind 45 minutes behind the live edge.",
           "type": "string"
+        },
+        "FillPolicy": {
+          "description": "Defines the policy to apply to the avail suppression mode. BEHIND_LIVE_EDGE will always use the full avail suppression policy. AFTER_LIVE_EDGE mode can be used to invoke partial ad break fills when a session starts mid-break. Valid values are FULL_AVAIL_ONLY and PARTIAL_AVAIL",
+          "type": "string",
+          "enum": [
+            "PARTIAL_AVAIL",
+            "FULL_AVAIL_ONLY"
+          ]
         }
       }
     },
