--- a/internal/service/cloudformation/schemas/AWS_MediaPackage_PackagingConfiguration.json
+++ b/internal/service/cloudformation/schemas/AWS_MediaPackage_PackagingConfiguration.json
@@ -444,32 +444,17 @@
       ]
     }
   },
+  "tagging": {
+    "taggable": true,
+    "tagOnCreate": true,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false,
+    "tagProperty": "/properties/Tags"
+  },
   "additionalProperties": false,
   "required": [
     "PackagingGroupId",
     "Id"
-  ],
-  "oneOf": [
-    {
-      "required": [
-        "HlsPackage"
-      ]
-    },
-    {
-      "required": [
-        "DashPackage"
-      ]
-    },
-    {
-      "required": [
-        "MssPackage"
-      ]
-    },
-    {
-      "required": [
-        "CmafPackage"
-      ]
-    }
   ],
   "readOnlyProperties": [
     "/properties/Arn"
