--- a/.github/workflows/labelers.yml
+++ b/.github/workflows/labelers.yml
@@ -7,7 +7,6 @@ permissions:
 on:
   issues:
     types:
-      - assigned
       - closed
       - edited
       - opened
@@ -24,101 +23,103 @@ on:
       - opened
 
 jobs:
-  community_check:
-    name: Community Check
-    runs-on: ubuntu-latest
-    permissions: {}
-
-    outputs:
-      author_is_core_contributor: ${{ steps.check.outputs.author_is_core_contributor }}
-      author_is_maintainer: ${{ steps.check.outputs.author_is_maintainer }}
-      author_is_partner: ${{ steps.check.outputs.author_is_partner }}
-      assignee_is_maintainer: ${{ steps.check.outputs.assignee_is_maintainer }}
-      commenter_is_maintainer: ${{ steps.check.outputs.commenter_is_maintainer }}
-      sender_is_maintainer: ${{ steps.check.outputs.sender_is_maintainer }}
-
-    steps:
-      - name: Compare Logins to Lists
-        id: check
-        env:
-          AUTHOR_LOGIN: ${{ github.event.issue.user.login || github.event.pull_request.user.login }}
-          ASSIGNEE_LOGIN: ${{ github.event.assignee.login }}
-          COMMENTER_LOGIN: ${{ github.event.comment.user.login }}
-          SENDER_LOGIN: ${{ github.event.sender.login }}
-        run: |
-          echo "author_is_core_contributor=$(echo ${{ secrets.CORE_CONTRIBUTORS }} | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-
-          echo "author_is_maintainer=$(echo ${{ secrets.MAINTAINERS }} | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-
-          echo "author_is_partner=$(echo ${{ secrets.PARTNERS }} | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-
-          # If the environment variable is unset, passing it as a jq arg throws an error
-          if [ -n "$ASSIGNEE_LOGIN" ]; then
-            echo "assignee_is_maintainer=$(echo ${{ secrets.MAINTAINERS }} | base64 --decode | jq --arg u $ASSIGNEE_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-          fi
-
-          if [ -n "$COMMENTER_LOGIN" ]; then
-            echo "commenter_is_maintainer=$(echo ${{ secrets.MAINTAINERS }} | base64 --decode | jq --arg u $COMMENTER_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-          fi
-
-          echo "sender_is_maintainer=$(echo ${{ secrets.MAINTAINERS }} | base64 --decode | jq --arg u $SENDER_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
-
   repo_and_community:
     name: Repository and Community Labels
-    needs: community_check
     runs-on: ubuntu-latest
 
     env:
       GH_CLI_SUBCOMMAND: ${{ (github.event.issue.pull_request || github.event.pull_request) && 'pr' || 'issue' }}
       ISSUE_URL: ${{ github.event.issue.html_url || github.event.pull_request.html_url }}
       LABELS: ${{ toJSON(github.event.issue.labels.*.name || github.event.pull_request.labels.*.name) }}
-
-      AUTHOR_IS_CORE_CONTRIBUTOR: ${{ needs.community_check.outputs.author_is_core_contributor }}
-      AUTHOR_IS_MAINTAINER: ${{ needs.community_check.outputs.author_is_maintainer }}
-      AUTHOR_IS_PARTNER: ${{ needs.community_check.outputs.author_is_partner }}
-      ASSIGNEE_IS_MAINTAINER: ${{ needs.community_check.outputs.assignee_is_maintainer }}
-      COMMENTER_IS_MAINTAINER: ${{ needs.community_check.outputs.commenter_is_maintainer }}
-      SENDER_IS_MAINTAINER: ${{ needs.community_check.outputs.sender_is_maintainer }}
+      MAINTAINERS: ${{ secrets.MAINTAINERS }}
 
     steps:
-      - name: Prioritize Maintainer Assignments and Contributions
-        if: |
-          (github.event.action == 'assigned' && fromJSON(env.ASSIGNEE_IS_MAINTAINER))
-          || ((github.event_name == 'pull_request_target' && github.event.action == 'opened') && fromJSON(env.AUTHOR_IS_MAINTAINER))
+      - name: "Community Check: Author"
+        id: author
+        if: github.event.action == 'opened'
+        env:
+          AUTHOR_LOGIN: ${{ github.event.issue.user.login || github.event.pull_request.user.login }}
+          CORE_CONTRIBUTORS: ${{ secrets.CORE_CONTRIBUTORS }}
+          PARTNERS: ${{ secrets.PARTNERS }}
         run: |
-          gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --add-label prioritized
+          echo "is_core_contributor=$(echo $CORE_CONTRIBUTORS | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
+
+          echo "is_maintainer=$(echo $MAINTAINERS | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
+
+          echo "is_partner=$(echo $PARTNERS | base64 --decode | jq --arg u $AUTHOR_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
 
       - name: Indicate That Triage is Required
         if: |
-          github.event.action == 'opened'
-          && !fromJSON(env.AUTHOR_IS_MAINTAINER)
+          steps.author.conclusion != 'skipped'
+          && !fromJSON(steps.author.outputs.is_maintainer)
         run: |
           gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --add-label needs-triage
 
-      - name: Credit Partner Contributions
-        if: |
-          github.event.action == 'opened'
-          && fromJSON(env.AUTHOR_IS_PARTNER)
-        run: |
-          gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --add-label partner
-
       - name: Credit Core Contributor Contributions
         if: |
-          github.event.action == 'opened'
-          && fromJSON(env.AUTHOR_IS_CORE_CONTRIBUTOR)
+          github.event_name == 'pull_request_target'
+          && steps.author.conclusion != 'skipped'
+          && fromJSON(steps.author.outputs.is_core_contributor)
         run: |
-          gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --add-label external-maintainer
+          gh pr edit "$ISSUE_URL" --add-label external-maintainer
+
+      - name: Add prioritized to Maintainer Contributions
+        if: |
+          github.event_name == 'pull_request_target'
+          && steps.author.conclusion != 'skipped'
+          && fromJSON(steps.author.outputs.is_maintainer))
+        run: |
+          gh pr edit "$ISSUE_URL" --add-label prioritized
+
+      - name: Credit Partner Contributions
+        if: |
+          github.event_name == 'pull_request_target'
+          && steps.author.conclusion != 'skipped'
+          && fromJSON(steps.author.outputs.is_partner)
+        run: |
+          gh pr edit "$ISSUE_URL" --add-label partner
+
+      - name: "Community Check: Assignee"
+        id: assignee
+        if: github.event.action == 'assigned'
+        env:
+          ASSIGNEE_LOGIN: ${{ github.event.assignee.login }}
+        run: |
+          echo "is_maintainer=$(echo $MAINTAINERS | base64 --decode | jq --arg u $ASSIGNEE_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
+
+      - name: Add prioritized to Maintainer Assignments
+        if: |
+          steps.assignee.conclusion != 'skipped'
+          && fromJSON(steps.assignee.outputs.is_maintainer))
+        run: |
+          gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --add-label prioritized
+
+      - name: "Community Check: Editor"
+        id: editor
+        if: github.event.action == 'edited'
+        env:
+          EDITOR_LOGIN: ${{ github.event.sender.login }}
+        run: |
+          echo "is_maintainer=$(echo $MAINTAINERS | base64 --decode | jq --arg u $ASSIGNEE_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
 
       - name: Remove Stale Indicators on Non-Maintainer Edit
         if: |
-          (github.event.action == 'edited' && !fromJSON(env.SENDER_IS_MAINTAINER))
+          (steps.editor.conclusion != 'skipped' && !fromJSON(steps.editor.outputs.is_maintainer))
           && (contains(fromJSON(env.LABELS), 'stale') || contains(fromJSON(env.LABELS), 'waiting-response'))
         run: |
           gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --remove-label stale,waiting-response
 
+      - name: "Community Check: Commenter"
+        id: commenter
+        if: github.event.action == 'created'
+        env:
+          COMMENTER_LOGIN: ${{ github.event.comment.user.login }}
+        run: |
+          echo "is_maintainer=$(echo $MAINTAINERS | base64 --decode | jq --arg u $COMMENTER_LOGIN '. | contains([$u])')" >> "$GITHUB_OUTPUT"
+
       - name: Remove Stale Indicators on Non-Maintainer Comment
         if: |
-          (github.event.action == 'created' && !fromJSON(env.COMMENTER_IS_MAINTAINER))
+          (steps.commenter.conclusion != 'skipped' && !fromJSON(steps.commenter.outputs.is_maintainer))
           && (contains(fromJSON(env.LABELS), 'stale') || contains(fromJSON(env.LABELS), 'waiting-response'))
         run: |
           gh $GH_CLI_SUBCOMMAND edit "$ISSUE_URL" --remove-label stale,waiting-response
