06/19/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSetEventDestination.json
+++ b/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSetEventDestination.json
@@ -36,10 +36,30 @@
         "SnsDestination": {
           "description": "An object that contains SNS topic ARN associated event destination.",
           "$ref": "#/definitions/SnsDestination"
+        },
+        "EventBridgeDestination": {
+          "description": "An object that contains Event bus ARN associated with the event bridge destination.",
+          "$ref": "#/definitions/EventBridgeDestination"
         }
       },
       "required": [
         "MatchingEventTypes"
+      ]
+    },
+    "EventBridgeDestination": {
+      "type": "object",
+      "additionalProperties": false,
+      "description": "An object that contains Event bus ARN associated with the event bridge destination.",
+      "properties": {
+        "EventBusArn": {
+          "type": "string",
+          "minLength": 36,
+          "maxLength": 1024,
+          "pattern": "^arn:aws[a-z0-9-]*:events:[a-z0-9-]+:\\d{12}:event-bus/[^:]+$"
+        }
+      },
+      "required": [
+        "EventBusArn"
       ]
     },
     "SnsDestination": {
