06/26/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_ResilienceHub_App.json
+++ b/internal/service/cloudformation/schemas/AWS_ResilienceHub_App.json
@@ -264,7 +264,8 @@
         "resiliencehub:DescribeApp",
         "resiliencehub:DescribeAppVersionTemplate",
         "resiliencehub:ListAppVersionResourceMappings",
-        "resiliencehub:ListTagsForResource"
+        "resiliencehub:ListTagsForResource",
+        "resiliencehub:ListAppVersions"
       ]
     },
     "update": {
