--- a/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSet.json
+++ b/internal/service/cloudformation/schemas/AWS_SES_ConfigurationSet.json
@@ -12,7 +12,10 @@
           "type": "string",
           "description": "The domain to use for tracking open and click events."
         }
-      }
+      },
+      "required": [
+        "CustomRedirectDomain"
+      ]
     },
     "DeliveryOptions": {
       "description": "An object that defines the dedicated IP pool that is used to send emails that you send using the configuration set.",
