07/10/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_EntityResolution_IdMappingWorkflow.json
+++ b/internal/service/cloudformation/schemas/AWS_EntityResolution_IdMappingWorkflow.json
@@ -46,9 +46,9 @@
       "type": "object",
       "properties": {
         "InputSourceARN": {
-          "description": "An Glue table ARN for the input source table or IdNamespace ARN",
+          "description": "An Glue table ARN for the input source table, MatchingWorkflow arn or IdNamespace ARN",
           "type": "string",
-          "pattern": "arn:(aws|aws-us-gov|aws-cn):.*:.*:[0-9]+:.*$"
+          "pattern": "^arn:(aws|aws-us-gov|aws-cn):entityresolution:[a-z]{2}-[a-z]{1,10}-[0-9]:[0-9]{12}:(idnamespace/[a-zA-Z_0-9-]{1,255})$|^arn:(aws|aws-us-gov|aws-cn):entityresolution:[a-z]{2}-[a-z]{1,10}-[0-9]:[0-9]{12}:(matchingworkflow/[a-zA-Z_0-9-]{1,255})$|^arn:(aws|aws-us-gov|aws-cn):glue:[a-z]{2}-[a-z]{1,10}-[0-9]:[0-9]{12}:(table/[a-zA-Z_0-9-]{1,255}/[a-zA-Z_0-9-]{1,255})$"
         },
         "SchemaArn": {
           "type": "string",
@@ -90,13 +90,85 @@
         "IdMappingType": {
           "type": "string",
           "enum": [
-            "PROVIDER"
+            "PROVIDER",
+            "RULE_BASED"
           ]
+        },
+        "NormalizationVersion": {
+          "type": "string"
+        },
+        "RuleBasedProperties": {
+          "$ref": "#/definitions/IdMappingRuleBasedProperties"
         },
         "ProviderProperties": {
           "$ref": "#/definitions/ProviderProperties"
         }
       },
+      "additionalProperties": false
+    },
+    "IdMappingRuleBasedProperties": {
+      "type": "object",
+      "properties": {
+        "Rules": {
+          "type": "array",
+          "insertionOrder": false,
+          "minItems": 1,
+          "maxItems": 25,
+          "items": {
+            "$ref": "#/definitions/Rule"
+          }
+        },
+        "RuleDefinitionType": {
+          "type": "string",
+          "enum": [
+            "SOURCE",
+            "TARGET"
+          ]
+        },
+        "AttributeMatchingModel": {
+          "type": "string",
+          "enum": [
+            "ONE_TO_ONE",
+            "MANY_TO_MANY"
+          ]
+        },
+        "RecordMatchingModel": {
+          "type": "string",
+          "enum": [
+            "ONE_SOURCE_TO_ONE_TARGET",
+            "MANY_SOURCE_TO_ONE_TARGET"
+          ]
+        }
+      },
+      "required": [
+        "AttributeMatchingModel",
+        "RecordMatchingModel"
+      ],
+      "additionalProperties": false
+    },
+    "Rule": {
+      "type": "object",
+      "properties": {
+        "RuleName": {
+          "type": "string",
+          "pattern": "^[a-zA-Z_0-9- \\t]*$",
+          "minLength": 0,
+          "maxLength": 255
+        },
+        "MatchingKeys": {
+          "type": "array",
+          "insertionOrder": false,
+          "minItems": 1,
+          "maxItems": 15,
+          "items": {
+            "$ref": "#/definitions/AttributeName"
+          }
+        }
+      },
+      "required": [
+        "RuleName",
+        "MatchingKeys"
+      ],
       "additionalProperties": false
     },
     "ProviderProperties": {
