--- a/internal/service/cloudformation/schemas/AWS_EC2_TransitGatewayRouteTableAssociation.json
+++ b/internal/service/cloudformation/schemas/AWS_EC2_TransitGatewayRouteTableAssociation.json
@@ -1,8 +1,61 @@
 {
+  "tagging": {
+    "taggable": false,
+    "tagOnCreate": false,
+    "tagUpdatable": false,
+    "cloudFormationSystemTags": false
+  },
   "typeName": "AWS::EC2::TransitGatewayRouteTableAssociation",
   "description": "Resource Type definition for AWS::EC2::TransitGatewayRouteTableAssociation",
+  "createOnlyProperties": [
+    "/properties/TransitGatewayRouteTableId",
+    "/properties/TransitGatewayAttachmentId"
+  ],
+  "primaryIdentifier": [
+    "/properties/TransitGatewayRouteTableId",
+    "/properties/TransitGatewayAttachmentId"
+  ],
+  "required": [
+    "TransitGatewayRouteTableId",
+    "TransitGatewayAttachmentId"
+  ],
   "sourceUrl": "https://github.com/aws-cloudformation/aws-cloudformation-resource-providers-transitgateway.git",
+  "handlers": {
+    "read": {
+      "permissions": [
+        "ec2:GetTransitGatewayRouteTableAssociations"
+      ]
+    },
+    "create": {
+      "permissions": [
+        "ec2:AssociateTransitGatewayRouteTable",
+        "ec2:GetTransitGatewayRouteTableAssociations"
+      ]
+    },
+    "list": {
+      "permissions": [
+        "ec2:GetTransitGatewayRouteTableAssociations"
+      ],
+      "handlerSchema": {
+        "properties": {
+          "TransitGatewayRouteTableId": {
+            "$ref": "resource-schema.json#/properties/TransitGatewayRouteTableId"
+          }
+        },
+        "required": [
+          "TransitGatewayRouteTableId"
+        ]
+      }
+    },
+    "delete": {
+      "permissions": [
+        "ec2:GetTransitGatewayRouteTableAssociations",
+        "ec2:DisassociateTransitGatewayRouteTable"
+      ]
+    }
+  },
   "additionalProperties": false,
+  "definitions": {},
   "properties": {
     "TransitGatewayRouteTableId": {
       "description": "The ID of transit gateway route table.",
@@ -13,58 +66,5 @@
       "type": "string"
     }
   },
-  "definitions": {},
-  "replacementStrategy": "delete_then_create",
-  "required": [
-    "TransitGatewayRouteTableId",
-    "TransitGatewayAttachmentId"
-  ],
-  "createOnlyProperties": [
-    "/properties/TransitGatewayRouteTableId",
-    "/properties/TransitGatewayAttachmentId"
-  ],
-  "primaryIdentifier": [
-    "/properties/TransitGatewayRouteTableId",
-    "/properties/TransitGatewayAttachmentId"
-  ],
-  "tagging": {
-    "taggable": false,
-    "tagOnCreate": false,
-    "tagUpdatable": false,
-    "cloudFormationSystemTags": false
-  },
-  "handlers": {
-    "create": {
-      "permissions": [
-        "ec2:AssociateTransitGatewayRouteTable",
-        "ec2:GetTransitGatewayRouteTableAssociations"
-      ]
-    },
-    "read": {
-      "permissions": [
-        "ec2:GetTransitGatewayRouteTableAssociations"
-      ]
-    },
-    "delete": {
-      "permissions": [
-        "ec2:GetTransitGatewayRouteTableAssociations",
-        "ec2:DisassociateTransitGatewayRouteTable"
-      ]
-    },
-    "list": {
-      "handlerSchema": {
-        "properties": {
-          "TransitGatewayRouteTableId": {
-            "$ref": "resource-schema.json#/properties/TransitGatewayRouteTableId"
-          }
-        },
-        "required": [
-          "TransitGatewayRouteTableId"
-        ]
-      },
-      "permissions": [
-        "ec2:GetTransitGatewayRouteTableAssociations"
-      ]
-    }
-  }
+  "replacementStrategy": "delete_then_create"
 }
