07/24/2024 CloudFormation schemas in us-east-1; Refresh existing schemas.

--- a/internal/service/cloudformation/schemas/AWS_DMS_ReplicationConfig.json
+++ b/internal/service/cloudformation/schemas/AWS_DMS_ReplicationConfig.json
@@ -142,9 +142,22 @@
     "tagOnCreate": true,
     "tagUpdatable": true,
     "cloudFormationSystemTags": false,
-    "tagProperty": "/properties/Tags"
+    "tagProperty": "/properties/Tags",
+    "permissions": [
+      "dms:AddTagsToResource",
+      "dms:ListTagsForResource",
+      "dms:RemoveTagsFromResource"
+    ]
   },
   "additionalProperties": false,
+  "required": [
+    "ReplicationConfigIdentifier",
+    "SourceEndpointArn",
+    "TargetEndpointArn",
+    "ReplicationType",
+    "ComputeConfig",
+    "TableMappings"
+  ],
   "handlers": {
     "create": {
       "permissions": [
@@ -167,7 +180,7 @@
       "permissions": [
         "dms:ModifyReplicationConfig",
         "dms:AddTagsToResource",
-        "dms:RemoveTagsToResource",
+        "dms:RemoveTagsFromResource",
         "dms:ListTagsForResource",
         "iam:CreateServiceLinkedRole",
         "iam:AttachRolePolicy",
