--- a/internal/service/cloudformation/schemas/AWS_WorkSpacesWeb_UserSettings.json
+++ b/internal/service/cloudformation/schemas/AWS_WorkSpacesWeb_UserSettings.json
@@ -161,6 +161,9 @@
       "maxLength": 2048,
       "minLength": 20,
       "pattern": "^arn:[\\w+=\\/,.@-]+:[a-zA-Z0-9\\-]+:[a-zA-Z0-9\\-]*:[a-zA-Z0-9]{1,12}:[a-zA-Z]+(\\/[a-fA-F0-9\\-]{36})+$"
+    },
+    "DeepLinkAllowed": {
+      "$ref": "#/definitions/EnabledType"
     }
   },
   "required": [
